# haskell-1942

./: .gitignore  README.md  h1942.cabal  stack.yaml
assets/: bullet.png~  gameover.png~  instrucoes.png~
src/: Background.hs  Collider.hs  GameOver.hs  Main.hs  UI.hs  World.hs
