name:                h1942
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/h1942#readme
license:             BSD3
license-file:        LICENSE
author:              Rafael Pauwels de Macedo
maintainer:          example@example.com
copyright:           2021 Rafael Pauwels de Macedo
category:            Game
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable h1942
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , gloss
                     , JuicyPixels-repa
                     , random
